--- a/public/style.css
+++ b/public/style.css
@@ -2,21 +2,24 @@ body {
   font-family: Arial, sans-serif;
   font-size: 16px;
   color: #222;
-  background-color: #fff;
   text-align: center;
   line-height: 1.4em;
+  background-color: #c9c7e0;
+}
+
+h1 {
+  font-size: 2.3rem;
+  line-height: 40px;
 }
 
 main {
   padding: 0;
-  margin-top: 40px;
+  margin-top: 20px;
 }
 
 h3 {
   margin-top: 30px;
 }
-
-
 
 .user-stories li {
   margin-bottom: 1em;
@@ -40,7 +43,7 @@ input {
   padding: 5px;
 }
 
-input[type='text'] {
+input[type="text"] {
   width: 220px;
   text-align: center;
 }
