--- a/views/index.html
+++ b/views/index.html
@@ -1,5 +1,4 @@
 <!DOCTYPE html>
-
 <html>
   <head>
     <title>URL Shortener Microservice | freeCodeCamp.org</title>
@@ -10,7 +9,6 @@
     />
     <link href="/public/style.css" rel="stylesheet" type="text/css" />
   </head>
-
   <body>
     <h1>URL Shortener Microservice</h1>
     <main>
@@ -19,14 +17,26 @@
           <fieldset>
             <legend>URL Shortener</legend>
             <label for="url_input">URL:</label>
-            <input id="url_input" type="text" name="url" placeholder="https://www.freecodecamp.org/" />
+            <input
+              id="url_input"
+              type="text"
+              name="url"
+              placeholder="https://www.freecodecamp.org/"
+            />
             <input type="submit" value="POST URL" />
           </fieldset>
         </form>
       </section>
     </main>
     <footer>
-      <p>By <a href="https://www.freecodecamp.org/">freeCodeCamp</a></p>
+      <p>
+        Made By
+        <a href="https://www.chanalston.com/" target="_blank">Chan Alston</a>
+      </p>
+      <p>
+        Template Provided By
+        <a href="https://www.freecodecamp.org/" target="_blank">freeCodeCamp</a>
+      </p>
     </footer>
   </body>
 </html>
